--- a/index.html
+++ b/index.html
@@ -3,17 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>To-Do List</h1>
+    <div class="container">
+        <input type="text">
+        <div class="container1">
+            <button class="button">7</button>
+            <button class="button">8</button>
+            <button class="button">9</button>
+            <button class="button">*</button>
+        </div>
 
-    <input type="text" id="taskInput" placeholder="add a new task">
-    <button id="addTaskBtn">add task</button>
+        <div class="container1">
+            <button class="button">4</button>
+            <button class="button">5</button>
+            <button class="button">6</button>
+            <button class="button">/</button>
+        </div>
 
-    <ul id="taskList"></ul>
+        <div class="container1">
+            <button class="button">1</button>
+            <button class="button">2</button>
+            <button class="button">3</button>
+            <button class="button">+</button>
+        </div>
+
+        <div class="container1">
+            <button class="button">0</button>
+            <button class="button">.</button>
+            <button class="button">-</button>
+            <button class="button">=</button>
+        </div>
+    </div>
     
     <script src="script.js"></script>
+
 </body>
 </html>
